--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1432,32 +1432,36 @@
     "    logger.info(\"Embedding user query using LangChain...\")\n",
     "    user_embedding = embeddings.embed_query(user_input)\n",
     "    logger.info(\"User query embedded.\")\n",
-    "    return np.array(user_embedding).reshape(1, 768)  # Reshape to match FAISS input format\n"
+    "    user_embedding = np.array(user_embedding).reshape(1, -1)  # Reshape to match FAISS input format\n",
+    "    print(\"User embedding shape:\", user_embedding.shape)  # Debugging: print shape\n",
+    "    return user_embedding\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "# steps 5\n",
     "from langchain.vectorstores import FAISS\n",
+    "from langchain_community.docstore.in_memory import InMemoryDocstore\n",
+    "\n",
     "\n",
     "def retrieve_lyrics_with_langchain(query_embedding):\n",
     "    logger.info(\"Performing lyrics retrieval using LangChain...\")\n",
-    "    retriever = FAISS(index=lyrics_index, embeddings=embeddings)\n",
-    "    docs = retriever.similarity_search(query_embedding, k=5)\n",
+    "    retriever = FAISS(embedding_function=embeddings.embed_query, index=lyrics_index, docstore=InMemoryDocstore(lyrics_data), index_to_docstore_id={})\n",
+    "    docs = retriever.similarity_search_by_vector(query_embedding, k=5)\n",
     "    logger.info(f\"Retrieved top 5 lyrics using LangChain.\")\n",
     "    return docs\n",
     "\n",
     "def retrieve_audio_features_with_langchain(query_embedding):\n",
     "    logger.info(\"Performing audio feature retrieval using LangChain...\")\n",
-    "    retriever = FAISS(index=audio_index, embeddings=embeddings)\n",
+    "    retriever = FAISS(embedding_function=embeddings.embed_query, index=audio_index)\n",
     "    docs = retriever.similarity_search(query_embedding, k=5)\n",
     "    logger.info(f\"Retrieved top 5 audio features using LangChain.\")\n",
     "    return docs\n",
-    "\n",
+    "    \n",
     "def combine_retrieval_results(lyrics_docs, audio_docs):\n",
     "    logger.info(\"Combining retrieval results...\")\n",
     "    combined_results = lyrics_docs + audio_docs  # This could be a simple concatenation or more sophisticated merging\n",
@@ -1467,19 +1471,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\vaish\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\huggingface_hub\\file_download.py:159: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\vaish\\.cache\\huggingface\\hub\\models--gpt2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# step 6\n",
     "def format_recommendations(retrieved_docs):\n",
@@ -1502,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1517,6 +1511,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "User embedding shape: (1, 768)\n",
       "Query embedding shape: (1, 768)\n"
      ]
     }
@@ -1524,13 +1519,53 @@
    "source": [
     "#testing\n",
     "# Example user query\n",
-    "user_query = \"I want to listen to some upbeat music about dancing.\"\n",
+    "user_query = \"summer happy vibes\"\n",
     "\n",
     "# Create an embedding for the user query\n",
     "query_embedding = embed_user_query(user_query)\n",
     "\n",
     "# Check if the embedding shape matches what FAISS expects (should be 2D, with one row per item)\n",
     "print(f\"Query embedding shape: {query_embedding.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:Performing lyrics retrieval using LangChain...\n",
+      "WARNING:langchain_community.vectorstores.faiss:`embedding_function` is expected to be an Embeddings object, support for passing in a function will soon be removed.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[65], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Retrieve lyrics using the query embedding\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m lyrics_docs \u001b[38;5;241m=\u001b[39m \u001b[43mretrieve_lyrics_with_langchain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery_embedding\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Check the results\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLyrics retrieval results:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[62], line 9\u001b[0m, in \u001b[0;36mretrieve_lyrics_with_langchain\u001b[1;34m(query_embedding)\u001b[0m\n\u001b[0;32m      7\u001b[0m logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPerforming lyrics retrieval using LangChain...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m retriever \u001b[38;5;241m=\u001b[39m FAISS(embedding_function\u001b[38;5;241m=\u001b[39membeddings\u001b[38;5;241m.\u001b[39membed_query, index\u001b[38;5;241m=\u001b[39mlyrics_index, docstore\u001b[38;5;241m=\u001b[39mInMemoryDocstore(lyrics_data), index_to_docstore_id\u001b[38;5;241m=\u001b[39m{})\n\u001b[1;32m----> 9\u001b[0m docs \u001b[38;5;241m=\u001b[39m \u001b[43mretriever\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msimilarity_search_by_vector\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery_embedding\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRetrieved top 5 lyrics using LangChain.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m docs\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\langchain_community\\vectorstores\\faiss.py:469\u001b[0m, in \u001b[0;36mFAISS.similarity_search_by_vector\u001b[1;34m(self, embedding, k, filter, fetch_k, **kwargs)\u001b[0m\n\u001b[0;32m    446\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msimilarity_search_by_vector\u001b[39m(\n\u001b[0;32m    447\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m    448\u001b[0m     embedding: List[\u001b[38;5;28mfloat\u001b[39m],\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    452\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: Any,\n\u001b[0;32m    453\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m List[Document]:\n\u001b[0;32m    454\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return docs most similar to embedding vector.\u001b[39;00m\n\u001b[0;32m    455\u001b[0m \n\u001b[0;32m    456\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    467\u001b[0m \u001b[38;5;124;03m        List of Documents most similar to the embedding.\u001b[39;00m\n\u001b[0;32m    468\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 469\u001b[0m     docs_and_scores \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msimilarity_search_with_score_by_vector(\n\u001b[0;32m    470\u001b[0m         embedding,\n\u001b[0;32m    471\u001b[0m         k,\n\u001b[0;32m    472\u001b[0m         \u001b[38;5;28mfilter\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mfilter\u001b[39m,\n\u001b[0;32m    473\u001b[0m         fetch_k\u001b[38;5;241m=\u001b[39mfetch_k,\n\u001b[0;32m    474\u001b[0m         \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs,\n\u001b[0;32m    475\u001b[0m     )\n\u001b[0;32m    476\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [doc \u001b[38;5;28;01mfor\u001b[39;00m doc, _ \u001b[38;5;129;01min\u001b[39;00m docs_and_scores]\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\langchain_community\\vectorstores\\faiss.py:304\u001b[0m, in \u001b[0;36mFAISS.similarity_search_with_score_by_vector\u001b[1;34m(self, embedding, k, filter, fetch_k, **kwargs)\u001b[0m\n\u001b[0;32m    302\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_normalize_L2:\n\u001b[0;32m    303\u001b[0m     faiss\u001b[38;5;241m.\u001b[39mnormalize_L2(vector)\n\u001b[1;32m--> 304\u001b[0m scores, indices \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msearch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvector\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mfilter\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mis\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mfetch_k\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    305\u001b[0m docs \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    307\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mfilter\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\faiss\\class_wrappers.py:327\u001b[0m, in \u001b[0;36mhandle_Index.<locals>.replacement_search\u001b[1;34m(self, x, k, params, D, I)\u001b[0m\n\u001b[0;32m    300\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mreplacement_search\u001b[39m(\u001b[38;5;28mself\u001b[39m, x, k, \u001b[38;5;241m*\u001b[39m, params\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, D\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, I\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m    301\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Find the k nearest neighbors of the set of vectors x in the index.\u001b[39;00m\n\u001b[0;32m    302\u001b[0m \n\u001b[0;32m    303\u001b[0m \u001b[38;5;124;03m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    324\u001b[0m \u001b[38;5;124;03m        When not enough results are found, the label is set to -1\u001b[39;00m\n\u001b[0;32m    325\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 327\u001b[0m     n, d \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mshape\n\u001b[0;32m    328\u001b[0m     x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mascontiguousarray(x, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfloat32\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    329\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m d \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39md\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "# Retrieve lyrics using the query embedding\n",
+    "lyrics_docs = retrieve_lyrics_with_langchain(query_embedding)\n",
+    "\n",
+    "# Check the results\n",
+    "print(\"Lyrics retrieval results:\")\n",
+    "for doc in lyrics_docs:\n",
+    "    print(doc.metadata['title'], doc.metadata['artist'])\n",
+    "\n"
    ]
   }
  ],
