new faiss approach

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1471,6 +1471,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def retrieve_songs(query):\n",
+    "#     # Preprocess the query to get embeddings\n",
+    "#     query_embedding = preprocess_query(query)\n",
+    "    \n",
+    "#     # Search the FAISS indices\n",
+    "#     lyrics_distances, lyrics_indices = lyrics_index.search(query_embedding, k=5)\n",
+    "#     lyrics_results = [lyrics_data[idx] for idx in lyrics_indices[0]]\n",
+    "    \n",
+    "#     audio_distances, audio_indices = audio_index.search(query_embedding, k=5)\n",
+    "#     audio_results = [tracks[idx] for idx in audio_indices[0]]\n",
+    "    \n",
+    "#     # Combine and rank results\n",
+    "#     combined_results = merge_and_rank_results(lyrics_results, audio_results)\n",
+    "#     return combined_results\n",
+    "\n",
+    "# use the above in the cell w retrieve lyrics w langchain\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
    "outputs": [],
@@ -1567,6 +1591,20 @@
     "    print(doc.metadata['title'], doc.metadata['artist'])\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
