--- a/notebook_testing.ipynb
+++ b/notebook_testing.ipynb
@@ -119,6 +119,9 @@
     "from dotenv import load_dotenv\n",
     "import lyricsgenius\n",
     "\n",
+    "# TODO : limit the number of the request to the API\n",
+    "\n",
+    "\n",
     "# Load environment variables from .env file\n",
     "load_dotenv()\n",
     "\n",
@@ -268,17 +271,27 @@
     "import chromadb\n",
     "# we need to save the data first and then convert it to chroma format \n",
     "# might want to do as key being user then value being the stats of the data \n",
-    "chroma_client = chromadb.Client()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from FlagEmbedding import BGEM3FlagModel\n",
+    "chroma_client = chromadb.Client()\n",
     "\n",
+    "\n",
+    "# TODO : add the user to the database\n",
+    "# TODO : add the song embeddings to the database using the prev cell \n",
+    "\n",
+    "# sentences_1 = [\"What is BGE M3?\", \"Defination of BM25\"]\n",
+    "# sentences_2 = [\"BGE M3 is an embedding model supporting dense retrieval, lexical matching and multi-vector interaction.\", \n",
+    "#                \"BM25 is a bag-of-words retrieval function that ranks a set of documents based on the query terms appearing in each document\"]\n",
+    "\n",
+    "# output_1 = model.encode(sentences_1, return_dense=True, return_sparse=True, return_colbert_vecs=True)\n",
+    "# output_2 = model.encode(sentences_2, return_dense=True, return_sparse=True, return_colbert_vecs=True)\n",
+    "\n",
+    "# print(model.colbert_score(output_1['colbert_vecs'][0], output_2['colbert_vecs'][0]))\n",
+    "# print(model.colbert_score(output_1['colbert_vecs'][0], output_2['colbert_vecs'][1]))\n",
+    "# # 0.7797\n",
+    "# # 0.4620\n",
+    "\n",
+    "\n",
+    "from FlagEmbedding import BGEM3FlagModel\n",
+    "# model we are using for mebedding as colbert vector \n",
     "\n",
     "#indexing model\n",
     "model = BGEM3FlagModel('BAAI/bge-m3',  use_fp16=True) "
@@ -290,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# step 4\n",
+    "#TODO UPDATE THE USER QUERY SAME AS THE WAY WE STORE IT \n",
     "\n",
     "from langchain.embeddings import HuggingFaceEmbeddings\n",
     "\n",
@@ -302,7 +315,17 @@
     "    logger.info(\"User query embedded.\")\n",
     "    user_embedding = np.array(user_embedding) # Reshape to match FAISS input format\n",
     "    print(\"User embedding shape:\", user_embedding.shape)  # Debugging: print shape\n",
-    "    return user_embedding\n"
+    "    return user_embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# FOR ME FROM HERE ONWARD \n"
    ]
   },
   {
