--- a/notebook_testing.ipynb
+++ b/notebook_testing.ipynb
@@ -255,6 +255,33 @@
     "            raise HTTPException(status_code=404, detail=\"Lyrics not found\")\n",
     "    except HTTPException as e:\n",
     "        raise e\n",
+    "    \n",
+    "@app.get(\"/singleplaylist\")\n",
+    "async def singleplaylist(playlist_id: str):\n",
+    "    try:\n",
+    "        sp = get_spotify_client()\n",
+    "        playlist = sp.playlist(playlist_id)\n",
+    "        detailed_playlist = {\n",
+    "            \"name\": playlist['name'],\n",
+    "            \"tracks\": []\n",
+    "        }\n",
+    "\n",
+    "        for track in playlist['tracks']['items']:\n",
+    "            track_info = {\n",
+    "                \"name\": track['track']['name'],\n",
+    "                \"album\": track['track']['album']['name'],\n",
+    "                \"artists\": [artist['name'] for artist in track['track']['artists']],\n",
+    "                \"url\": track['track']['external_urls']['spotify']\n",
+    "            }\n",
+    "            track_details = get_audio_features_and_analysis(sp, track['track']['id'])\n",
+    "            track_info.update(track_details)\n",
+    "            detailed_playlist['tracks'].append(track_info)\n",
+    "        \n",
+    "        return {\"playlist\": detailed_playlist}\n",
+    "    except HTTPException as e:\n",
+    "        if e.status_code == 307:\n",
+    "            return RedirectResponse(url=\"/login\")\n",
+    "        raise e\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    import uvicorn\n",
