--- a/notebook_testing.ipynb
+++ b/notebook_testing.ipynb
@@ -295,6 +295,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# 1. **Initialize ChromaDB Client**:\n",
+    "#    - Create a ChromaDB client instance.\n",
+    "   \n",
+    "# 2. **Initialize Embedding Model**:\n",
+    "#    - Load the BGEM3FlagModel for generating embeddings.\n",
+    "\n",
+    "# 3. **Define Function to Store User Data in ChromaDB**:\n",
+    "#    - Check if the ChromaDB collection (e.g., \"spotify_embeddings\") exists.\n",
+    "#      - If it doesn't exist, create the collection.\n",
+    "#      - Otherwise, retrieve the existing collection.\n",
+    "#    - Add the user's data (track info and embedding) to the collection using a unique ID.\n",
+    "\n",
+    "# 4. **Define `/store_embeddings` Endpoint**:\n",
+    "#    - Get the Spotify client.\n",
+    "#    - Fetch the user's liked songs, limiting the number of songs retrieved to 50.\n",
+    "#    - Initialize a counter (`embedded_count`) to track the number of songs processed.\n",
+    "   \n",
+    "#    - **For each song in the liked songs list**:\n",
+    "#      - If the counter reaches 50, break the loop.\n",
+    "#      - Retrieve track information (e.g., name, album, artists, URL).\n",
+    "#      - Fetch additional track details (audio features and analysis).\n",
+    "#      - Update the track information with these details.\n",
+    "     \n",
+    "#      - **Generate Embedding**:\n",
+    "#        - Create a text representation of the track (e.g., \"Track name by Artist from Album\").\n",
+    "#        - Generate the embedding using the model.\n",
+    "     \n",
+    "#      - **Store Data in ChromaDB**:\n",
+    "#        - Store the user ID, track information, and embedding in ChromaDB.\n",
+    "     \n",
+    "#      - Increment the counter.\n",
+    "\n",
+    "#    - Return a success message with the number of songs embedded.\n",
+    "\n",
+    "# 5. **Handle Exceptions**:\n",
+    "#    - If the Spotify token is invalid, redirect to the login page.\n",
+    "#    - If other exceptions occur, raise the appropriate HTTP exception.\n",
+    "\n",
+    "# ### Example Flow:\n",
+    "\n",
+    "# - User requests to store embeddings via the `/store_embeddings` endpoint.\n",
+    "# - The system retrieves up to 50 liked songs.\n",
+    "# - For each song, it generates an embedding and stores it in ChromaDB, ensuring the limit of 50 songs is not exceeded.\n",
+    "# - The endpoint responds with a success message indicating how many songs were processed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import chromadb\n",
     "# we need to save the data first and then convert it to chroma format \n",
     "# might want to do as key being user then value being the stats of the data \n",
@@ -321,7 +374,10 @@
     "# model we are using for mebedding as colbert vector \n",
     "\n",
     "#indexing model\n",
-    "model = BGEM3FlagModel('BAAI/bge-m3',  use_fp16=True) "
+    "model = BGEM3FlagModel('BAAI/bge-m3',  use_fp16=True) \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
