tried adding chromadb + debug endpts

--- a/notebook_testing.ipynb
+++ b/notebook_testing.ipynb
@@ -39,7 +39,8 @@
     "%pip install chromadb\n",
     "%pip install -U FlagEmbedding\n",
     "%pip install langchain langchain-community\n",
-    "%pip install sentence-transformers\n"
+    "%pip install sentence-transformers\n",
+    "%pip install peft"
    ]
   },
   {
@@ -112,15 +113,17 @@
    "source": [
     "import os\n",
     "import logging\n",
-    "from fastapi import FastAPI, HTTPException, Request\n",
-    "from fastapi.responses import RedirectResponse\n",
+    "from fastapi import FastAPI, HTTPException, Request, Query\n",
+    "from fastapi.responses import RedirectResponse, JSONResponse\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyOAuth\n",
     "from dotenv import load_dotenv\n",
     "import lyricsgenius\n",
+    "from spotipy.exceptions import SpotifyException\n",
+    "import chromadb\n",
     "\n",
-    "# TODO : limit the number of the request to the API\n",
-    "\n",
+    "# Import BGEM3FlagModel from FlagEmbedding\n",
+    "from FlagEmbedding import BGEM3FlagModel\n",
     "\n",
     "# Load environment variables from .env file\n",
     "load_dotenv()\n",
@@ -143,6 +146,20 @@
     "# Initialize Genius API\n",
     "genius = lyricsgenius.Genius(os.getenv(\"GENIUS_API_TOKEN\"))\n",
     "\n",
+    "# Initialize ChromaDB client\n",
+    "client = chromadb.Client()\n",
+    "\n",
+    "# Initialize ChromaDB collection\n",
+    "def get_or_create_collection(name: str):\n",
+    "    try:\n",
+    "        collection = client.get_collection(name)\n",
+    "    except chromadb.CollectionNotFoundException:\n",
+    "        collection = client.create_collection(name)\n",
+    "    return collection\n",
+    "\n",
+    "# Load the BGEM3FlagModel\n",
+    "model = BGEM3FlagModel('BAAI/bge-m3', use_fp16=True)\n",
+    "\n",
     "def get_spotify_client():\n",
     "    token_info = sp_oauth.get_cached_token()\n",
     "\n",
@@ -161,6 +178,22 @@
     "        \"audio_features\": audio_features,\n",
     "        \"audio_analysis\": audio_analysis\n",
     "    }\n",
+    "\n",
+    "def generate_embedding(text: str) -> list:\n",
+    "    # Use the BGEM3FlagModel to generate embeddings\n",
+    "    embedding = model.encode(text)  # Replace with the actual method for generating embeddings\n",
+    "    return embedding\n",
+    "\n",
+    "def store_track_embedding(user_id: str, track_info: dict, embedding: list):\n",
+    "    collection_name = \"spotify_embeddings\"\n",
+    "    collection = get_or_create_collection(collection_name)\n",
+    "    \n",
+    "    # Store the track information and embedding in ChromaDB\n",
+    "    collection.add(\n",
+    "        ids=[track_info['id']],\n",
+    "        metadatas=[track_info],\n",
+    "        embeddings=[embedding]\n",
+    "    )\n",
     "\n",
     "@app.get(\"/\")\n",
     "async def read_root():\n",
@@ -183,48 +216,17 @@
     "    token_info = sp_oauth.get_access_token(code)\n",
     "\n",
     "    if token_info:\n",
-    "        logger.info(\"Access token obtained successfully\")\n",
+    "        logger.info(\"Access token obtained successfully!\")\n",
     "        # Redirect to a default page or the originally requested page\n",
-    "        return RedirectResponse(url=\"/playlists\")\n",
+    "        return RedirectResponse(url=\"/liked_songs\")\n",
     "    else:\n",
     "        raise HTTPException(status_code=401, detail=\"Could not authenticate with Spotify\")\n",
     "\n",
-    "@app.get(\"/playlists\")\n",
-    "async def playlists():\n",
-    "    try:\n",
-    "        sp = get_spotify_client()\n",
-    "        playlists = sp.current_user_playlists()\n",
-    "        detailed_playlists = []\n",
-    "\n",
-    "        for playlist in playlists['items']:\n",
-    "            playlist_data = {\n",
-    "                \"name\": playlist['name'],\n",
-    "                \"tracks\": []\n",
-    "            }\n",
-    "            tracks = sp.playlist_tracks(playlist['id'])\n",
-    "            for track in tracks['items']:\n",
-    "                track_info = {\n",
-    "                    \"name\": track['track']['name'],\n",
-    "                    \"album\": track['track']['album']['name'],\n",
-    "                    \"artists\": [artist['name'] for artist in track['track']['artists']],\n",
-    "                    \"url\": track['track']['external_urls']['spotify']\n",
-    "                }\n",
-    "                track_details = get_audio_features_and_analysis(sp, track['track']['id'])\n",
-    "                track_info.update(track_details)\n",
-    "                playlist_data['tracks'].append(track_info)\n",
-    "            detailed_playlists.append(playlist_data)\n",
-    "        \n",
-    "        return {\"playlists\": detailed_playlists}\n",
-    "    except HTTPException as e:\n",
-    "        if e.status_code == 307:\n",
-    "            return RedirectResponse(url=\"/login\")\n",
-    "        raise e\n",
-    "\n",
     "@app.get(\"/liked_songs\")\n",
-    "async def liked_songs():\n",
+    "async def liked_songs(limit: int = Query(default=100, description=\"Number of liked songs to fetch\")):\n",
     "    try:\n",
     "        sp = get_spotify_client()\n",
-    "        liked_songs = sp.current_user_saved_tracks()\n",
+    "        liked_songs = sp.current_user_saved_tracks(limit=limit)\n",
     "        detailed_songs = []\n",
     "\n",
     "        for item in liked_songs['items']:\n",
@@ -239,11 +241,19 @@
     "            track_info.update(track_details)\n",
     "            detailed_songs.append(track_info)\n",
     "        \n",
+    "        logger.info(f\"Number of liked songs retrieved: {len(liked_songs['items'])}\")\n",
+    "        logger.info(f\"Fetching liked songs up to limit: {min(limit, len(liked_songs['items']))}\")\n",
+    "        \n",
     "        return {\"liked_songs\": detailed_songs}\n",
     "    except HTTPException as e:\n",
     "        if e.status_code == 307:\n",
     "            return RedirectResponse(url=\"/login\")\n",
     "        raise e\n",
+    "    except SpotifyException as e:\n",
+    "        if e.http_status == 429:\n",
+    "            return JSONResponse(status_code=429, content={\"message\": \"Rate limit exceeded, please try again later.\"})\n",
+    "        else:\n",
+    "            return JSONResponse(status_code=500, content={\"message\": \"An error occurred while fetching liked songs.\"})\n",
     "\n",
     "@app.get(\"/lyrics\")\n",
     "async def lyrics(artist: str, title: str):\n",
@@ -255,7 +265,7 @@
     "            raise HTTPException(status_code=404, detail=\"Lyrics not found\")\n",
     "    except HTTPException as e:\n",
     "        raise e\n",
-    "    \n",
+    "\n",
     "@app.get(\"/singleplaylist\")\n",
     "async def singleplaylist(playlist_id: str):\n",
     "    try:\n",
@@ -283,10 +293,61 @@
     "            return RedirectResponse(url=\"/login\")\n",
     "        raise e\n",
     "\n",
+    "@app.get(\"/store_embeddings\")\n",
+    "async def store_embeddings(limit: int = Query(default=50, description=\"Number of liked songs to fetch\")):\n",
+    "    try:\n",
+    "        sp = get_spotify_client()\n",
+    "        liked_songs = sp.current_user_saved_tracks(limit=limit)\n",
+    "        embedded_count = 0\n",
+    "        user_id = sp.current_user()['id']\n",
+    "\n",
+    "        for item in liked_songs['items']:\n",
+    "            if embedded_count >= limit:\n",
+    "                break\n",
+    "\n",
+    "            track = item['track']\n",
+    "            track_info = {\n",
+    "                \"id\": track['id'],\n",
+    "                \"name\": track['name'],\n",
+    "                \"album\": track['album']['name'],\n",
+    "                \"artists\": [artist['name'] for artist in track['artists']],\n",
+    "                \"url\": track['external_urls']['spotify']\n",
+    "            }\n",
+    "            track_details = get_audio_features_and_analysis(sp, track['id'])\n",
+    "            track_info.update(track_details)\n",
+    "\n",
+    "            # Generate embedding\n",
+    "            track_text = f\"{track_info['name']} by {track_info['artists'][0]} from {track_info['album']}\"\n",
+    "            embedding = generate_embedding(track_text)\n",
+    "\n",
+    "            # Store data in ChromaDB\n",
+    "            store_track_embedding(user_id, track_info, embedding)\n",
+    "            embedded_count += 1\n",
+    "\n",
+    "        logger.info(f\"Number of songs embedded: {embedded_count}\")\n",
+    "\n",
+    "        return {\"message\": f\"Successfully embedded {embedded_count} songs\"}\n",
+    "    except HTTPException as e:\n",
+    "        if e.status_code == 307:\n",
+    "            return RedirectResponse(url=\"/login\")\n",
+    "        raise e\n",
+    "    except SpotifyException as e:\n",
+    "        if e.http_status == 429:\n",
+    "            return JSONResponse(status_code=429, content={\"message\": \"Rate limit exceeded, please try again later.\"})\n",
+    "        else:\n",
+    "            return JSONResponse(status_code=500, content={\"message\": \"An error occurred while embedding songs.\"})\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
     "    import uvicorn\n",
-    "    logger.info(\"Starting FastAPI server...\")\n",
-    "    uvicorn.run(app, host=\"0.0.0.0\", port=8235)\n"
+    "    import asyncio\n",
+    "\n",
+    "    async def start_server():\n",
+    "        config = uvicorn.Config(app, host=\"127.0.0.1\", port=8235)\n",
+    "        server = uvicorn.Server(config)\n",
+    "        await server.serve()\n",
+    "\n",
+    "    # Await the start_server function directly\n",
+    "    asyncio.run(start_server())\n"
    ]
   },
   {
@@ -558,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
