--- a/notebook_testing.ipynb
+++ b/notebook_testing.ipynb
@@ -339,7 +339,10 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    import uvicorn\n",
+    "    import nest_asyncio\n",
     "    import asyncio\n",
+    "    \n",
+    "    nest_asyncio.apply()\n",
     "\n",
     "    async def start_server():\n",
     "        config = uvicorn.Config(app, host=\"127.0.0.1\", port=8235)\n",
@@ -347,7 +350,7 @@
     "        await server.serve()\n",
     "\n",
     "    # Await the start_server function directly\n",
-    "    asyncio.run(start_server())\n"
+    "    await start_server()"
    ]
   },
   {
