--- a/notebook_testing.ipynb
+++ b/notebook_testing.ipynb
@@ -997,10 +997,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Collection(id=87a41ed7-cd89-48f3-a421-5a59b2f10c35, name=eqanbww3jh63cgf4ot5zyyr5d_liked_songs)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find total number of songs in the database\n",
+    "\n",
+    "db = chromadb.Client()\n",
+    "collections = db.list_collections()\n",
+    "print(collections)\n",
+    "\n",
+    "collection = db.get_collection('eqanbww3jh63cgf4ot5zyyr5d_liked_songs')\n",
+    "collection.count()"
+   ]
   }
  ],
  "metadata": {
