adding recommended non liked songs

--- a/notebook_testing.ipynb
+++ b/notebook_testing.ipynb
@@ -1855,6 +1855,57 @@
     "        else:\n",
     "            return JSONResponse(status_code=500, content={\"message\": \"An error occurred while creating the playlist.\"})\n",
     "\n",
+    "@app.get(\"/get_recommendations\")\n",
+    "async def get_recommendations(query: str, k: int = Query(default=5, description=\"Number of search results to fetch\")):\n",
+    "    try:\n",
+    "        sp = get_spotify_client()\n",
+    "        user_id = sp.current_user()['id']  # Get the current user's ID\n",
+    " \n",
+    "        # Step 1: Perform the search and retrieve results\n",
+    "        search_results = await search(query, k)\n",
+    "        seed_tracks = []\n",
+    "        seed_artists = []\n",
+    "        seed_genres = []\n",
+    " \n",
+    "        for result in search_results['results']:\n",
+    "            metadata = result['metadata']\n",
+    "            if metadata and 'track_id' in metadata:\n",
+    "                seed_tracks.append(metadata['track_id'])\n",
+    "            if metadata and 'artists' in metadata:\n",
+    "                seed_artists.extend(metadata['artists'])  # Assuming artists' IDs are stored in metadata\n",
+    " \n",
+    "        # Use only up to 5 seeds as required by Spotify API\n",
+    "        seed_tracks = seed_tracks[:5]\n",
+    "        seed_artists = seed_artists[:5]\n",
+    " \n",
+    "        # Step 2: Get recommendations based on seeds\n",
+    "        recommendations = sp.recommendations(\n",
+    "            seed_tracks=seed_tracks,\n",
+    "            seed_artists=seed_artists,\n",
+    "            seed_genres=seed_genres,\n",
+    "            limit=10,  # Adjust the limit as needed\n",
+    "            market=\"US\"  # Adjust the market as needed\n",
+    "        )\n",
+    " \n",
+    "        # Step 3: Filter out tracks already liked by the user\n",
+    "        liked_songs = sp.current_user_saved_tracks(limit=50)\n",
+    "        liked_track_ids = {item['track']['id'] for item in liked_songs['items']}\n",
+    " \n",
+    "        filtered_recommendations = [track for track in recommendations['tracks'] if track['id'] not in liked_track_ids]\n",
+    " \n",
+    "        # Step 4: Return or store the recommendations\n",
+    "        return {\"recommendations\": filtered_recommendations}\n",
+    " \n",
+    "    except HTTPException as e:\n",
+    "        if e.status_code == 307:\n",
+    "            return RedirectResponse(url=\"/login\")\n",
+    "        raise e\n",
+    "    except SpotifyException as e:\n",
+    "        if e.http_status == 429:\n",
+    "            return JSONResponse(status_code=429, content={\"message\": \"Rate limit exceeded, please try again later.\"})\n",
+    "        else:\n",
+    "            return JSONResponse(status_code=500, content={\"message\": \"An error occurred while fetching recommendations.\"})\n",
+    "\n",
     "# def format_recommendations(recommendations):\n",
     "#     formatted_list = []\n",
     "#     for rec in recommendations:\n",
@@ -1897,20 +1948,7 @@
      ]
     }
    ],
-   "source": [
-    "# find total number of songs in the database\n",
-    "\n",
-    "db = chromadb.Client()\n",
-    "collections = db.list_collections()\n",
-    "print(collections)\n",
-    "\n",
-    "collection = db.get_collection('eqanbww3jh63cgf4ot5zyyr5d_liked_songs')\n",
-    "collection.count()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
