--- a/notebook_testing.ipynb
+++ b/notebook_testing.ipynb
@@ -1933,22 +1933,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'chromadb' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# find total number of songs in the database\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m db \u001b[38;5;241m=\u001b[39m \u001b[43mchromadb\u001b[49m\u001b[38;5;241m.\u001b[39mClient()\n\u001b[0;32m      4\u001b[0m collections \u001b[38;5;241m=\u001b[39m db\u001b[38;5;241m.\u001b[39mlist_collections()\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(collections)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'chromadb' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "%pip freeze > requirements.txt \n",
+    " "
+   ]
   }
  ],
  "metadata": {
@@ -1967,7 +1966,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
