--- a/notebook_testing.ipynb
+++ b/notebook_testing.ipynb
@@ -26,23 +26,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install lyricsgenius\n",
-    "%pip install spotipy\n",
-    "%pip install spotipy lyricsgenius transformers scikit-learn gtts pydub librosa\n",
-    "%pip install faiss-cpu\n",
-    "%pip install tqdm\n",
-    "%pip install torch\n",
-    "%pip install lyricsgenius spotipy transformers scikit-learn gtts pydub librosa faiss-cpu tqdm mlflow\n",
-    "%pip install torch  --index-url https://download.pytorch.org/whl/cu118\n",
-    "%pip install uvicorn\n",
-    "%pip install nest_asyncio\n",
-    "%pip install chromadb\n",
-    "%pip install -U FlagEmbedding\n",
-    "%pip install langchain langchain-community\n",
-    "%pip install sentence-transformers\n",
-    "%pip install peft\n",
-    "%pip install -qU \"langchain-chroma>=0.1.2\"\n",
-    "%pip install streamlit"
+    "pip install lyricsgenius\n",
+    "pip install spotipy\n",
+    "pip install spotipy lyricsgenius transformers scikit-learn gtts pydub librosa\n",
+    "pip install faiss-cpu\n",
+    "pip install tqdm\n",
+    "pip install torch\n",
+    "pip install lyricsgenius spotipy transformers scikit-learn gtts pydub librosa faiss-cpu tqdm mlflow\n",
+    "pip install torch  --index-url https://download.pytorch.org/whl/cu118\n",
+    "pip install uvicorn\n",
+    "pip install nest_asyncio\n",
+    "pip install chromadb\n",
+    "pip install -U FlagEmbedding\n",
+    "pip install langchain langchain-community\n",
+    "pip install sentence-transformers\n",
+    "pip install peft\n",
+    "pip install -qU \"langchain-chroma>=0.1.2\"\n",
+    "pip install streamlit\n",
+    "pip install python-dotenv"
    ]
   },
   {
@@ -659,7 +660,7 @@
    "source": [
     "import os\n",
     "import logging\n",
-    "from fastapi import FastAPI, HTTPException, Request, Query\n",
+    "from backend import FastAPI, HTTPException, Request, Query\n",
     "from fastapi.responses import RedirectResponse, JSONResponse\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyOAuth\n",
@@ -831,6 +832,68 @@
     "            # If it's not a valid JSON string, keep the value as is\n",
     "            new_metadata[key] = value\n",
     "    return new_metadata\n",
+    "\n",
+    "\n",
+    "@app.get(\"/search\")\n",
+    "async def search(query: str, k: int = Query(default=5, description=\"Number of results to fetch\")):\n",
+    "    try:\n",
+    "        sp = get_spotify_client()\n",
+    "        user_id = sp.current_user()['id']  # Get the current user's ID\n",
+    "\n",
+    "        # Get text collection for this user\n",
+    "        text_store = get_text_collection(user_id)\n",
+    "        audio_store = get_audio_collection(user_id)\n",
+    "\n",
+    "        # Perform similarity search in text collection\n",
+    "        text_results = text_store.similarity_search(query, k=k)\n",
+    "\n",
+    "        # Retrieve corresponding audio features and analysis based on track IDs\n",
+    "        audio_results = []\n",
+    "        for text_result in text_results:\n",
+    "            track_id = text_result.metadata['track_id']\n",
+    "            audio_result = audio_store.get([track_id])  # Retrieve audio data by track ID\n",
+    "\n",
+    "            # Log the audio_result for debugging purposes\n",
+    "            logger.info(f\"Audio result for track_id {track_id}: {audio_result}\")\n",
+    "\n",
+    "            # Check if audio_result exists and is a non-empty list\n",
+    "            if audio_result and isinstance(audio_result, list) and len(audio_result) > 0:\n",
+    "                audio_metadata = audio_result[0].metadata\n",
+    "                if audio_metadata:\n",
+    "                    # Convert JSON strings back to lists in audio metadata\n",
+    "                    audio_metadata = convert_strings_to_lists(audio_metadata)\n",
+    "                audio_results.append(audio_metadata)\n",
+    "            else:\n",
+    "                logger.warning(f\"No valid audio data found for track_id {track_id}.\")\n",
+    "                audio_results.append(None)\n",
+    "\n",
+    "        # Combine text and audio data for final output\n",
+    "        combined_results = []\n",
+    "        for text_result, audio_result in zip(text_results, audio_results):\n",
+    "            combined_results.append({\n",
+    "                \"text\": text_result.page_content,\n",
+    "                \"metadata\": text_result.metadata,\n",
+    "                \"audio\": audio_result\n",
+    "            })\n",
+    "            # print(f\"---------------------------Combined Result: {combined_results}\")\n",
+    "        \n",
+    "        # response_text = format_response(combined_results)\n",
+    "        # return {\"results\": response_text}\n",
+    "        return {\"results\": combined_results}\n",
+    "    \n",
+    "    except HTTPException as e:\n",
+    "        if e.status_code == 307:\n",
+    "            return RedirectResponse(url=\"/login\")\n",
+    "        raise e\n",
+    "    except SpotifyException as e:\n",
+    "        if e.http_status == 429:\n",
+    "            return JSONResponse(status_code=429, content={\"message\": \"Rate limit exceeded, please try again later.\"})\n",
+    "        else:\n",
+    "            return JSONResponse(status_code=500, content={\"message\": \"An error occurred during the search process.\"})\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "@app.get(\"/store_embeddings\")\n",
     "async def store_embeddings(limit: int = Query(default=50, description=\"Number of liked songs to fetch\")):\n",
@@ -1073,18 +1136,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import nest_asyncio\n",
     "import uvicorn\n",
     "import subprocess\n",
-    "from fastapi import FastAPI\n",
+    "from backend import FastAPI\n",
     "\n",
     "# Apply the nest_asyncio patch to allow running FastAPI in a Jupyter notebook\n",
     "nest_asyncio.apply()\n",
@@ -1098,7 +1154,7 @@
     "run_fastapi()\n",
     "\n",
     "# Start Streamlit app in a subprocess\n",
-    "subprocess.run([\"streamlit\", \"run\", \"app.py\"])\n"
+    "subprocess.run([\"streamlit\", \"run\", \"run.py\"])\n"
    ]
   },
   {
@@ -1342,9 +1398,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (new_env)",
    "language": "python",
-   "name": "python3"
+   "name": "new_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1356,7 +1412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
